--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "title":"Bing's Blog",
     "subTitle":"松子顺着山坡滚落，你来到来这里。",
-    "avatarUrl":"https://github.com/BingGitCn/BingGitCn.github.io/blob/main/IMG_0370.jpeg",
+    "avatarUrl":"https://github.com/BingGitCn/BingGitCn.github.io/blob/main/IMG_0370.svg",
     "GMEEK_VERSION":"last"
 }
