--- a/config.json
+++ b/config.json
@@ -4,6 +4,8 @@
     "avatarUrl":"https://avatars.githubusercontent.com/u/23565059?v=4",
     "GMEEK_VERSION":"last",
     "singlePage":["about"],
+    "homeUrl":"https://blog.shici.online/",
+    "startSite":"09/30/2018",
     "script":"<script src='https://blog.meekdai.com/Gmeek/plugins/GmeekTOC.js'></script>"
 
 }
