--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "title":"Bing's Blog",
-    "subTitle":"浮光掠影，如意安宁。\r\n松子顺着山坡滚落，你来到了这里。",
+    "subTitle":"浮光掠影，如意安宁。\n松子顺着山坡滚落，你来到了这里。",
     "avatarUrl":"https://cdn.jsdelivr.net/gh/BingGitCn/BingGitCn.github.io@main/IMG_0370.svg",
     "GMEEK_VERSION":"last",
     "singlePage":["about"],
