--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "title":"Bing's Blog",
-    "subTitle":"浮光掠影，如意安宁。",
+    "subTitle":"溪边照影行，天在清溪底。天上有行云，人在行云里。",
     "avatarUrl":"https://cdn.jsdelivr.net/gh/BingGitCn/BingGitCn.github.io@main/IMG_0370.svg",
     "GMEEK_VERSION":"last",
     "singlePage":["about"],
