--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "title":"Bing's Blog",
     "subTitle":"溪边照影行，天在清溪底。天上有行云，人在行云里。",
-    "avatarUrl":"https://cdn.jsdelivr.net/gh/BingGitCn/BingGitCn.github.io@main/IMG_0370.svg",
+    "avatarUrl":"https://cdn.jsdelivr.net/gh/BingGitCn/BingGitCn.github.io/images/IMG_0558.jpg",
     "GMEEK_VERSION":"last",
     "singlePage":["about"],
     "homeUrl":"https://blog.shici.online/",
